asm/istio/expansion/expose-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cross-network-gateway
  namespace: istio-system
spec:
  selector:
    istio: eastwestgateway
  servers:
    - port:
        name: tls
        protocol: TLS
        number: 15443
      hosts:
        - "*.local"
      tls:
        mode: AUTO_PASSTHROUGH
