asm/istio/expansion/expose-istiod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istiod-gateway
  namespace: istio-system
spec:
  selector:
    istio: eastwestgateway
  servers:
    - port:
        name: tls-istiod
        protocol: tls
        number: 15012
      hosts:
        - "*"
      tls:
        mode: PASSTHROUGH
    - port:
        name: tls-istiodwebhook
        protocol: tls
        number: 15017
      hosts:
        - "*"
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiod-vs # kpt-set: ${anthos.servicemesh.istiod-vs-name}
  namespace: istio-system
spec:
  gateways:
    - istiod-gateway
  hosts:
    - "*"
  tls:
    - match:
        - port: 15012
          sniHosts:
            - istiod.istio-system.svc # kpt-set: ${anthos.servicemesh.istiodHost}
      route:
        - destination:
            port:
              number: 15012
            host: istiod.istio-system.svc.cluster.local # kpt-set: ${anthos.servicemesh.istiodHostFQDN}
    - match:
        - port: 15017
          sniHosts:
            - istiod.istio-system.svc # kpt-set: ${anthos.servicemesh.istiodHost}
      route:
        - destination:
            port:
              number: 443
            host: istiod.istio-system.svc.cluster.local # kpt-set: ${anthos.servicemesh.istiodHostFQDN}
